<resources>
    <string name="app_name">Complex</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="_0_employees">0 Employees</string>
    <string name="texti">No Employee found, Please add the employees</string>
    <string name="login_sign_up">Login . Sign Up</string>
    <string name="inactive_employees">Inactive Employees</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="overtime_details">Overtime Details</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="employee_remarks">Employee Remarks</string>
    <string name="mark_today_s_attendance">MARK TODAY\'S ATTENDANCE</string>
    <string name="info2">Payment Type(Monthly/Daily)</string>
    <string name="m_wages">Monthly Salary</string>
    <string name="allowed_leaves_for_a_month">Allowed leaves for a month</string>
    <string name="info1">Payment Information</string>
    <string name="name">Employee Name</string>
    <string name="number">Enter/Pick Phone number</string>
    <string name="info">Personal Information</string>
    <string name="employee_role">Employee Role</string>
    <string name="monthly">Monthly Salary</string>
    <string name="daily">Daily Wage</string>
    <string name="d_wages">Daily Wage</string>
    <string name="over_time">Over Time per Day</string>
    <string name="save">Save</string>
    <string-array name="job_title">
        <item>Driver</item>
        <item>Employee</item>
        <item>Sweeper</item>
        <item>Cook</item>
        <item>Operator</item>
        <item>Other</item>
    </string-array>
    <string name="enter_your_ten_digit_mobile_number">Enter your Ten digit mobile number</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="welcome_user">Welcome User !</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="num">123456</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="working">Working..</string>
    <string name="msg2">Please enter your Country Code and Phone number for verification</string>
    <string name="verified">Verified!</string>
    <string name="choose_designation">Choose designation</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="one_and_half">1.5</string>
    <string name="two">2</string>
    <string name="sample">Sample</string>
    <string name="marke">Mark Employee Attendance</string>
    <string name="enter_category">Enter Category</string>
    <string name="category">Category</string>
    <string name="enter_name">Enter Name</string>
    <string name="economics">Economics</string>
    <string name="select_">Select Income/Expenses</string>
    <string name="i_e">Income/Expenses</string>
    <string name="desc">Description</string>
    <string name="add">Add</string>
    <string name="select_category">Select Category</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="customer_name">Enter Customer Name</string>
    <string name="enter_customer_id">Enter Customer Id</string>
    <string name="enter_customer_geo_location">Enter Customer Geo location</string>
    <string name="customer_manager">Enter Customer Manager</string>
    <string name="customer_supervisor_name">Customer Supervisor Name</string>
    <string name="supervisor_number">Supervisor Number</string>
    <string name="manager_number">Manager Number</string>
    <string name="customer_description">Customer Description</string>
    <string name="save2">SAVE</string>
    <string name="_0customers">0Customers</string>
    <string name="info3">No Customer found, Please add the customers</string>
    <string name="customer">customer</string>
    <string name="current_month">Current Month</string>

    <string name="pending_bills">Pending Bills</string>
    <string name="profi_loss">Profit/Loss</string>
</resources>
