<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lavender_mist"
    tools:context=".AddCustomerDetails">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        app:title="Add Customer Details"
        android:background="@color/orange"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    <EditText
    android:id="@+id/cName"
    android:layout_below="@+id/toolbar6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_margin="5dp"
    android:hint="@string/customer_name"/>
    <EditText
        android:id="@+id/cId"
        android:layout_below="@+id/cName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_customer_id"/>
    <EditText
        android:id="@+id/cGeoLocation"
        android:layout_below="@+id/cId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_customer_geo_location"/>
    <EditText
        android:id="@+id/customerManager"
        android:layout_below="@+id/cGeoLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/customer_manager"/>
    <EditText
        android:id="@+id/supervisorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerManager"
        android:layout_margin="5dp"
        android:hint="@string/customer_supervisor_name"/>
    <EditText
        android:id="@+id/supervisorNumber"
        android:layout_below="@+id/supervisorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/supervisor_number"/>
    <EditText
        android:id="@+id/managerNumber"
        android:layout_below="@+id/supervisorNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/manager_number"/>
    <EditText
        android:id="@+id/customerDescription"
        android:layout_below="@+id/managerNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/customer_description"/>
    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_below="@id/customerDescription"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:text="@string/save2"
        android:onClick="save"
        android:textColor="@color/black"/>
</RelativeLayout>