<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployee">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                app:title="Add Employee Details"
                android:background="@color/orange"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:background="#b2c0e2"
                android:text="@string/info" />
            <EditText
                android:id="@+id/ed1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/name"
                android:layout_weight="1"
                android:inputType="textVisiblePassword|textNoSuggestions"/>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_designation"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:entries="@array/job_title"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />
            <EditText
                android:id="@+id/ed3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner1"
                android:hint="@string/employee_role"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/linear1">
            <TextView
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="0dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:background="#b2c0e2"
                android:text="@string/info1" />
            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl">
                <ToggleButton
                    android:id="@+id/togglemd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/monthly"
                    android:textOn="@string/daily"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/info2" />
            </LinearLayout>
            <EditText
                android:id="@+id/ed4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/m_wages"
                android:text="0"
                android:visibility="visible"
                android:inputType="number"
                android:singleLine="true"
                />
            <EditText
                android:id="@+id/ed5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/d_wages"
                android:text="0"
                android:inputType="number"
                android:visibility="gone"
                android:singleLine="true"
                />
            <EditText
                android:id="@+id/ed6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/over_time"
                android:inputType="time"/>
            <EditText
                android:id="@+id/ed7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/allowed_leaves_for_a_month"
                android:inputType="number"
                />
            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                android:background="@color/orange"
                android:onClick="saveButton"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>