<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lavender_mist"
    tools:context=".Economics">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        app:title="@string/i_e"
        app:titleTextColor="@color/white"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <TextView
        android:layout_below="@+id/toolbar5"
        android:id="@+id/econo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_margin="5dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:text="@string/select_"/>
    <RadioGroup
        android:id="@+id/income_expense"
        android:layout_below="@+id/econo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/present"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/absent"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense" />
    </RadioGroup>
    <TextView
        android:id="@+id/enter_amount"
        android:text="@string/enter_amount"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:layout_below="@+id/income_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/amount"
        android:layout_below="@+id/enter_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="0"
        android:hint="Amount"/>
    <TextView
        android:id="@+id/info2"
        android:layout_below="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:text="@string/select_category"/>
    <Spinner
        android:id="@+id/spinner2"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info2"/>

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner2"
        android:hint="@string/desc"
        android:inputType="textMultiLine"/>
    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:textColor="@color/black"
        android:text="@string/add"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn6" />
</RelativeLayout>