<?xml version="1.0" encoding="utf-8"?>
<!--Drawer layout for navigation drawer-->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:openDrawer="start"
    tools:context=".MainActivity"
    android:id="@+id/dl">
    <!--This goes into activity i.e., Home page-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <!--    The following snippet replaces the Action Bar, by changing in the theme to NoActionBar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:background="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
        <TextView
            android:layout_below="@+id/toolbar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_employees"
            android:id="@+id/tv1"
            android:padding="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_below="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:scrollbars="vertical"
            android:background="@color/Lavender_mist"
            />
        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/texti"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn1"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/orange"
            android:clickable="true"
            android:layout_marginRight="5dp"
            android:onClick="onClickSwitchActivity"
            app:srcCompat="@drawable/ic_person_add"
            android:focusable="true" />
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn1"
            android:onClick="categoryActivity"
            android:text="@string/category"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn1"
            android:layout_toEndOf="@+id/btn4"
            android:layout_margin="5dp"
            android:onClick="economicsActivity"
            android:text="@string/economics"/>
        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn1"
            android:layout_toRightOf="@+id/btn5"
            android:onClick="customerDetails"
            android:text="@string/customer"/>
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:onClick="markAttendance"
            android:background="@color/orange"
            android:layout_marginTop="10dp"
            android:text="@string/mark_today_s_attendance"/>
    </RelativeLayout>
    <!--Navigation Drawer-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>